# luci-menu-tool

./: .gitignore  README.md  __init__.py  create_test_override.py  debug_applier.py  debug_cpulimit.py  luci_menu_tool.py  main.py  pyproject.toml
core/: __init__.py  backup.py  base.py  error_handler.py  logger.py  models.py  registry.py  validator.py
docs/: luci_menu_tool_design.md
lua_controller/: __init__.py  applier.py  parser.py
menu_d/: __init__.py  applier.py  parser.py
test/: README.md
test/integration/: test_apply.py  test_cpulimit.py  test_known_issues.py
test/scripts/: create_test_override.py  test_duplicate_markers.py  test_modify.py  test_problem_packages.py
test/unit/: test_applier.py  test_lua_boundary_cases.py  test_lua_controller.py  test_lua_variable_reference.py  test_menu_d.py  test_menu_d_regex.py  test_ucode_controller.py
ucode_controller/: __init__.py  applier.py  parser.py
